--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
     <target name="generate-code" description="Generate Currency-specific subclasses of Money and autoloader code">
         <exec executable="${basedir}/build/generate-child-classes.php" taskname="generate-code"/>
 
-        <exec executable="${basedir}/build/tools/phpab.phar" taskname="generate-code">
+        <exec executable="/usr/bin/phpab" taskname="generate-code">
             <arg value="--output"/>
             <arg path="src/autoload.php"/>
             <arg path="src"/>
@@ -46,7 +46,7 @@
     </target>
 
     <target name="phploc" description="Measure project size using PHPLOC">
-        <exec executable="${basedir}/build/tools/phploc.phar" taskname="phploc">
+        <exec executable="/usr/bin/phploc" taskname="phploc">
             <arg value="--count-tests"/>
             <arg path="${basedir}/src"/>
             <arg path="${basedir}/tests"/>
@@ -55,7 +55,7 @@
 
     <target name="phploc-ci" depends="prepare"
             description="Measure project size using PHPLOC and log result in CSV and XML format">
-        <exec executable="${basedir}/build/tools/phploc.phar" taskname="phploc">
+        <exec executable="/usr/bin/phploc" taskname="phploc">
             <arg value="--count-tests"/>
             <arg value="--log-csv"/>
             <arg path="${basedir}/build/logs/phploc.csv"/>
@@ -67,7 +67,7 @@
     </target>
 
     <target name="pdepend" depends="prepare" description="Calculate software metrics using PHP_Depend">
-        <exec executable="${basedir}/build/tools/pdepend.phar" taskname="pdepend">
+        <exec executable="/usr/bin/pdepend" taskname="pdepend">
             <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml"/>
             <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg"/>
             <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg"/>
@@ -76,7 +76,7 @@
     </target>
 
     <target name="phpmd" description="Perform project mess detection using PHPMD and print result in text format">
-        <exec executable="${basedir}/build/tools/phpmd.phar" taskname="phpmd">
+        <exec executable="/usr/bin/phpmd" taskname="phpmd">
             <arg path="${basedir}/src"/>
             <arg value="text"/>
             <arg path="${basedir}/build/phpmd.xml"/>
@@ -85,7 +85,7 @@
 
     <target name="phpmd-ci" depends="prepare"
             description="Perform project mess detection using PHPMD and log result in XML format">
-        <exec executable="${basedir}/build/tools/phpmd.phar" taskname="phpmd">
+        <exec executable="/usr/bin/phpmd" taskname="phpmd">
             <arg path="${basedir}/src"/>
             <arg value="xml"/>
             <arg path="${basedir}/build/phpmd.xml"/>
@@ -96,7 +96,7 @@
 
     <target name="phpcs"
             description="Find coding standard violations using PHP_CodeSniffer and print result in text format">
-        <exec executable="${basedir}/build/tools/phpcs.phar" taskname="phpcs">
+        <exec executable="/usr/bin//phpcs" taskname="phpcs">
             <arg value="--standard=PSR2"/>
             <arg value="--extensions=php"/>
             <arg value="--ignore=autoload.php"/>
@@ -107,7 +107,7 @@
 
     <target name="phpcs-ci" depends="prepare"
             description="Find coding standard violations using PHP_CodeSniffer and log result in XML format">
-        <exec executable="${basedir}/build/tools/phpcs.phar" output="/dev/null" taskname="phpcs">
+        <exec executable="/usr/bin/phpcs" output="/dev/null" taskname="phpcs">
             <arg value="--report=checkstyle"/>
             <arg value="--report-file=${basedir}/build/logs/checkstyle.xml"/>
             <arg value="--standard=PSR2"/>
@@ -118,14 +118,14 @@
     </target>
 
     <target name="phpcpd" description="Find duplicate code using PHPCPD">
-        <exec executable="${basedir}/build/tools/phpcpd.phar" taskname="phpcpd">
+        <exec executable="/usr/bin/phpcpd" taskname="phpcpd">
             <arg path="${basedir}/src"/>
         </exec>
     </target>
 
     <target name="phpcpd-ci" depends="prepare"
             description="Find duplicate code using PHPCPD and log result in XML format">
-        <exec executable="${basedir}/build/tools/phpcpd.phar" taskname="phpcpd">
+        <exec executable="/usr/bin/phpcpd" taskname="phpcpd">
             <arg value="--log-pmd"/>
             <arg path="${basedir}/build/logs/pmd-cpd.xml"/>
             <arg path="${basedir}/src"/>
@@ -140,7 +140,7 @@
     </target>
 
     <target name="phpdox" depends="phploc-ci,phpcs-ci,phpmd-ci" description="Generate API documentation using phpDox">
-        <exec executable="${basedir}/build/tools/phpdox.phar" dir="${basedir}/build" taskname="phpdox"/>
+        <exec executable="/usr/bin/phpdox" dir="${basedir}/build" taskname="phpdox"/>
     </target>
 
     <target name="-check-failure">
