--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,8 @@
     </target>
 
     <target name="generate-code" description="Generate Currency-specific subclasses of Money and autoloader code">
+        <chmod file="${basedir}/build/generate-child-classes.php" perm="ugo+x"/>
+        <chmod file="${basedir}/build/tools/**" perm="ugo+x"/>
         <exec executable="${basedir}/build/generate-child-classes.php" taskname="generate-code"/>
 
         <exec executable="/usr/bin/phpab" taskname="generate-code">
